[tool.poetry]
name = "msla-pcb"
version = "0.1.0"
description = ""
authors = ["Re-l"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-image = "^0.24.0"
numpy-stl = "^3.1.2"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
